[package]
name = "minihlist"
version = "0.1.0"
authors = ["Waffle <waffle.lapkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
typenum = { version = "1.0", optional = true }

[features]
# features those require nightly compiler
nightly = []
